# ReaMCP

./: .gitignore  README.md  index.xml  pyproject.toml
bridge/: reaper_mcp_bridge.lua
reapack/: ReaMCP_Setup_Helper.lua  index.xml
src/reaper_mcp/: bridge_client.py  reaper_adapter.py  server.py
